--- a/xwiki-platform-core/xwiki-platform-mail/xwiki-platform-mail-test/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-mail/xwiki-platform-mail-test/pom.xml
@@ -24,24 +24,20 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.xwiki.platform</groupId>
-    <artifactId>xwiki-platform-core</artifactId>
+    <artifactId>xwiki-platform-mail</artifactId>
     <version>6.4-SNAPSHOT</version>
   </parent>
+  <artifactId>xwiki-platform-mail-test</artifactId>
+  <name>XWiki Platform - Mail - Tests - Parent POM</name>
   <packaging>pom</packaging>
-  <artifactId>xwiki-platform-mail</artifactId>
-  <name>XWiki Platform - Mail - Parent POM</name>
-  <description>XWiki Platform - Mail - Parent POM</description>
+  <description>XWiki Platform - Mail - Tests - Parent POM</description>
+  <properties>
+    <!-- Don't run CLIRR in test modules since we don't care about backward compatibility for tests -->
+    <xwiki.clirr.skip>true</xwiki.clirr.skip>
+    <!-- Don't run Checkstyle in test modules -->
+    <xwiki.checkstyle.skip>true</xwiki.checkstyle.skip>
+  </properties>
   <modules>
-    <!-- Sorted Alphabetically -->
-    <module>xwiki-platform-mail-send</module>
-    <module>xwiki-platform-mail-ui</module>
+    <module>xwiki-platform-mail-test-tests</module>
   </modules>
-  <profiles>
-    <profile>
-      <id>integration-tests</id>
-      <modules>
-        <module>xwiki-platform-mail-test</module>
-      </modules>
-    </profile>
-  </profiles>
 </project>
