XWIKI-11034: Use LESS4J for the implementation of LESSCompiler.
* Remove unwanted dependency.

--- a/xwiki-platform-core/xwiki-platform-lesscss/xwiki-platform-lesscss-default/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-lesscss/xwiki-platform-lesscss-default/pom.xml
@@ -90,6 +90,12 @@
       <groupId>com.github.sommeri</groupId>
       <artifactId>less4j</artifactId>
       <version>1.8.4</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.json</groupId>
+          <artifactId>json</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
   </project>
