XWIKI-11416: Move the "Pretty Name" and Description sections from the Main Wiki to their respective subwiki Administration page - Only displaying the owner field if the current user is the current owner or if he is a global admin (has edit on the wiki's descriptor document) - Added the UI dependencies on the common module at the correct level (in the wiki and main wiki UI modules, instead of the enterprise-ui-common as it was before)

--- a/xwiki-platform-core/xwiki-platform-wiki/xwiki-platform-wiki-ui/xwiki-platform-wiki-ui-wiki/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-wiki/xwiki-platform-wiki-ui/xwiki-platform-wiki-ui-wiki/pom.xml
@@ -55,5 +55,11 @@
       <version>${project.version}</version>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-wiki-ui-common</artifactId>
+      <version>${project.version}</version>
+      <type>xar</type>
+    </dependency>
   </dependencies>
 </project>
