[Misc] Fix name for EM

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-bootswatchthemes/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-bootswatchthemes/pom.xml
@@ -33,6 +33,10 @@
   <packaging>xar</packaging>
   <name>XWiki Platform - Flamingo - Bootswatch Themes</name>
   <description>Nice Themes for Flamingo created by Bootswatch.</description>
+  <properties>
+    <!-- Name to display by the Extension Manager -->
+    <xwiki.extension.name>Bootswatch Themes for Flamingo</xwiki.extension.name>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>org.xwiki.platform</groupId>
