--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -1436,6 +1436,7 @@ core.viewers.diff.metadata.name=Name
 core.viewers.diff.metadata.web=Space
 core.viewers.diff.metadata.space=Space
 core.viewers.diff.metadata.hidden=Hidden
+core.viewers.diff.metadata.syntax=Syntax
 core.viewers.diff.tag.tags=Tags
 core.viewers.diff.contentChanges=Content changes
 core.viewers.diff.attachmentChanges=Attachment changes
