--- a/xwiki-platform-core/xwiki-platform-help/xwiki-platform-help-ui/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-help/xwiki-platform-help-ui/pom.xml
@@ -73,5 +73,11 @@
       <version>${project.version}</version>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>org.xwiki.rendering</groupId>
+      <artifactId>xwiki-rendering-macro-comment</artifactId>
+      <version>${rendering.version}</version>
+      <scope>runtime</scope>
+    </dependency>
   </dependencies>
 </project>
