--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -4018,6 +4018,13 @@ platform.web.init.message.intializing=XWiki is initializing ({0}%)...
 platform.web.init.message.intializationFailure=XWiki initialization failed !
 platform.web.init.message.intializationSuccess=XWiki is initialized, you will be redirected shortly
 
+rating.one-star=Poor
+rating.two-stars=Satisfactory
+rating.three-stars=Good
+rating.four-stars=Very good
+rating.five-stars=Excellent
+rating.votes=Votes
+
 ###############################################################################
 ## Deprecated
 ## Note: each element should be removed when the last branch using it is no longer supported
