--- a/xwiki-platform-core/xwiki-platform-search/xwiki-platform-search-solr/xwiki-platform-search-solr-api/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-search/xwiki-platform-search-solr/xwiki-platform-search-solr-api/pom.xml
@@ -119,12 +119,13 @@
       <artifactId>xwiki-platform-query-manager</artifactId>
       <version>${project.version}</version>
     </dependency>
+
+    <!-- Embedded in the JAR to be used as default SOLR configuration -->
     <dependency>
-      <!-- This is needed at runtime by solrconfig.xml. -->
       <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-search-solr-plugin</artifactId>
+      <artifactId>xwiki-platform-search-solr-server-data</artifactId>
       <version>${project.version}</version>
-      <scope>runtime</scope>
+      <scope>provided</scope>
     </dependency>
 
     <!-- Testing dependencies -->
@@ -154,6 +155,33 @@
             **/AbstractSolrMetadataExtractor.java
           </excludes>
         </configuration>
+      </plugin>
+
+      <!-- Attach default configuration package -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>attach-default-configuration</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>copy</goal>
+            </goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>org.xwiki.platform</groupId>
+                  <artifactId>xwiki-platform-search-solr-server-data</artifactId>
+                  <version>${project.version}</version>
+                  <type>jar</type>
+                  <destFileName>xwiki-platform-search-solr-server-data.zip</destFileName>
+                </artifactItem>
+              </artifactItems>
+              <outputDirectory>${project.build.outputDirectory}/</outputDirectory>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
