XWIKI-11486: Batch API to send large volumes of mail  * Set TPC limit in POM (too low ATM!)

--- a/xwiki-platform-core/xwiki-platform-mail/xwiki-platform-mail-send/xwiki-platform-mail-send-storage/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-mail/xwiki-platform-mail-send/xwiki-platform-mail-send-storage/pom.xml
@@ -32,6 +32,7 @@
   <name>XWiki Platform - Mail - Send - Storage</name>
   <description>API to store mails and their statuses</description>
   <properties>
+    <xwiki.jacoco.instructionRatio>0.39</xwiki.jacoco.instructionRatio>
     <!-- Name to display by the Extension Manager -->
     <xwiki.extension.name>Mail Sender Storage</xwiki.extension.name>
   </properties>
