XWIKI-11486: Batch API to send large volumes of mail * Minor fixes * Update Admin UI

--- a/xwiki-platform-core/xwiki-platform-mail/xwiki-platform-mail-test/xwiki-platform-mail-test-tests/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-mail/xwiki-platform-mail-test/xwiki-platform-mail-test-tests/pom.xml
@@ -35,6 +35,7 @@
   <description>XWiki Platform - Mail - Functional Tests</description>
   <properties>
     <xwikiCfgSuperadminPassword>pass</xwikiCfgSuperadminPassword>
+    <xwikiDbHbmCommonExtraMappings>mailstream.hbm.xml</xwikiDbHbmCommonExtraMappings>
   </properties>
   <dependencies>
     <dependency>
