XWIKI-11329: Capitalize "Blank homepage"

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -716,7 +716,7 @@ core.create.spaceTitle=Create Space
 core.create.space=Space Name
 core.create.space.hint=Name of the new space
 core.create.space.template.hint=Template to use for the homepage of the new space
-core.create.space.template.empty=Blank homepage
+core.create.space.template.empty=Blank Homepage
 core.create.page.space.hint=Containing space for the new page
 core.create.page=Page Name
 core.create.page.hint=Name of the new page
