XWIKI-11486: Batch API to send large volumes of mail  * Fix build  * Removed extra space  * Renamed hbm file

--- a/xwiki-platform-core/xwiki-platform-mail/xwiki-platform-mail-test/xwiki-platform-mail-test-tests/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-mail/xwiki-platform-mail-test/xwiki-platform-mail-test-tests/pom.xml
@@ -35,7 +35,7 @@
   <description>XWiki Platform - Mail - Functional Tests</description>
   <properties>
     <xwikiCfgSuperadminPassword>pass</xwikiCfgSuperadminPassword>
-    <xwikiDbHbmCommonExtraMappings>mailstream.hbm.xml</xwikiDbHbmCommonExtraMappings>
+    <xwikiDbHbmCommonExtraMappings>mailsender.hbm.xml</xwikiDbHbmCommonExtraMappings>
   </properties>
   <dependencies>
     <dependency>
@@ -90,6 +90,17 @@
         <groupId>org.xwiki.platform</groupId>
         <artifactId>xwiki-platform-tool-packager-plugin</artifactId>
         <version>${project.version}</version>
+        <dependencies>
+          <!-- TODO: remove the need for this dependency in the future. The reason we need it right now is because
+               the Packager Mojo will use the Import Mojo to import XARs but since we've defined the
+               xwikiDbHbmCommonExtraMappings property up there, it's using it and thus we need the mapping file to be
+               in the classpath. -->
+          <dependency>
+            <groupId>org.xwiki.platform</groupId>
+            <artifactId>xwiki-platform-mail-send-storage</artifactId>
+            <version>${project.version}</version>
+          </dependency>
+        </dependencies>
         <executions>
           <execution>
             <phase>generate-test-resources</phase>
