XWIKI-11295: Capitalize "Preferences" list

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -2154,9 +2154,9 @@ admin.xwiki.extensionupdater.description=Check if there are any updates availabl
 admin.globaladmin=Wiki Preferences
 admin.spaceadmin=Space Preferences
 admin.placetoadminister=Place to administer
-admin.gotoglobaladministration=Edit Wiki preferences:
-admin.globaladministration=Wiki administration
-admin.gotospaceadministration=Edit space preferences: 
+admin.gotoglobaladministration=Edit Wiki Preferences:
+admin.globaladministration=Wiki Administration
+admin.gotospaceadministration=Edit Space Preferences: 
 admin.showsections=Show the available categories
 admin.hidesections=Hide the available categories
 admin.documentation=Help on this setting
