XWIKI-11305: Capitalize "Exit full screen" button

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -1109,7 +1109,7 @@ core.editors.content.titleField.sectionEditingFormat={0} (\u00A7{1}: {2})
 ###full screen
 core.editors.fullscreen.editFullScreen=Maximize
 core.editors.fullscreen.editFullScreenTitle=Maximize
-core.editors.fullscreen.exitFullScreen=Exit full screen
+core.editors.fullscreen.exitFullScreen=Exit Full Screen
 
 core.editors.object.title=Editing objects of <a href="{1}">{0}</a>
 core.editors.object.objectsForClass=Objects of type {0}
