--- a/xwiki-platform-core/xwiki-platform-mail/xwiki-platform-mail-send/xwiki-platform-mail-send-api/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-mail/xwiki-platform-mail-send/xwiki-platform-mail-send-api/pom.xml
@@ -32,6 +32,7 @@
   <name>XWiki Platform - Mail - Send - API</name>
   <description>API to send emails</description>
   <properties>
+    <xwiki.jacoco.instructionRatio>0.68</xwiki.jacoco.instructionRatio>
     <!-- Name to display by the Extension Manager -->
     <xwiki.extension.name>Mail Sender API</xwiki.extension.name>
   </properties>
