XWIKI-11494: Icons broken when left panel column is disabled

--- a/xwiki-platform-core/xwiki-platform-index/xwiki-platform-index-ui/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-index/xwiki-platform-index-ui/pom.xml
@@ -87,5 +87,13 @@
       <version>${project.version}</version>
       <scope>runtime</scope>
     </dependency>
+    <!-- The document tree macro uses FontAwesome for the node icons. -->
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-icon-fontawesome</artifactId>
+      <version>${project.version}</version>
+      <type>xar</type>
+      <scope>runtime</scope>
+    </dependency>
   </dependencies>
 </project>
