--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -1991,7 +1991,7 @@ core.tags.remove.tooltip=Delete this tag from the document
 core.tags.remove.error.notFound=This tag is not set
 core.tags.remove.error.notAllowed=You are not allowed to remove tags from this document
 core.tags.remove.error.failed=Failed to remove tag "{0}" due to an internal server error
-xe.tag.paramerror=Do not use <i>space</i> and <i>spaces</i> parameter in the same time
+xe.tag.paramerror=Do not use "space" and "spaces" parameter in the same time
 
 ### Page footer
 docextra.annotations=Annotations
