XWIKI-11635: Display an error when an extension is not compatible and information how to find a compatible version - Install log is also collapsed by default when trying to install an incompatible extension - Also fixed the casing of the Stable Versions label.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -3923,13 +3923,16 @@ extensions.info.status.remote-installed=Version {0} is installed
 extensions.info.status.remote-installed-incompatible=Incompatible with installed version {0}
 extensions.info.status.remote-installed-invalid=Installed version {0} is not valid
 extensions.info.stableVersions.linkLabel=List stable versions
-extensions.info.stableVersions.label=Stable versions
+extensions.info.stableVersions.label=Stable Versions
 extensions.info.stableVersions.noResults=There are no stable versions available.
 extensions.applicationsPanel.install=Install new applications
 job.log.label.install=Install log
 job.log.label.installplan=Install plan log
 job.log.label.uninstall=Uninstall log
 job.log.label.uninstallplan=Uninstall plan log
+
+platform.extension.info.error.versionNotCompatible=This version is not compatible with your installation.
+platform.extension.info.error.versionNotCompatibleHint=Search for a compatible version by going through the list of "Stable Versions" locate in the extension's "Description" tab.
 
 platform.extension.updater.checkForUpdates=Check for updates
 platform.extension.updater.checkForUpdatesGlobally=Check for updates on farm
