--- a/xwiki-platform-core/xwiki-platform-tag/xwiki-platform-tag-ui/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-tag/xwiki-platform-tag-ui/pom.xml
@@ -50,5 +50,11 @@
       <type>xar</type>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>org.xwiki.rendering</groupId>
+      <artifactId>xwiki-rendering-macro-message</artifactId>
+      <version>${project.version}</version>
+      <scope>runtime</scope>
+    </dependency>
   </dependencies>
 </project>
