XWIKI-11615: Add the possibility to display a tags cloud from multiple spaces using the tagcloud macro * fix dependency

--- a/xwiki-platform-core/xwiki-platform-tag/xwiki-platform-tag-ui/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-tag/xwiki-platform-tag-ui/pom.xml
@@ -53,7 +53,7 @@
     <dependency>
       <groupId>org.xwiki.rendering</groupId>
       <artifactId>xwiki-rendering-macro-message</artifactId>
-      <version>${project.version}</version>
+      <version>${rendering.version}</version>
       <scope>runtime</scope>
     </dependency>
   </dependencies>
