--- a/xwiki-platform-core/xwiki-platform-mail/xwiki-platform-mail-send/xwiki-platform-mail-send-storage/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-mail/xwiki-platform-mail-send/xwiki-platform-mail-send-storage/pom.xml
@@ -34,7 +34,7 @@
   <properties>
     <xwiki.jacoco.instructionRatio>0.42</xwiki.jacoco.instructionRatio>
     <!-- Name to display by the Extension Manager -->
-    <xwiki.extension.name>Mail Sender Storage</xwiki.extension.name>
+    <xwiki.extension.name>Mail Sender Storage API</xwiki.extension.name>
   </properties>
   <dependencies>
     <dependency>
