XWIKI-11635: Display an error when an extension is not compatible and information how to find a compatible version - Fixed typo - Minor refactoring on handling error logs. Still not perfect since the 'not compatible' string check is not reliable on the long term (once it starts being translated).

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -3933,7 +3933,7 @@ job.log.label.uninstall=Uninstall log
 job.log.label.uninstallplan=Uninstall plan log
 
 platform.extension.info.error.versionNotCompatible=This version is not compatible with your installation.
-platform.extension.info.error.versionNotCompatibleHint=Search for a compatible version by going through the list of "Stable Versions" locate in the extension's "Description" tab.
+platform.extension.info.error.versionNotCompatibleHint=Search for a compatible version by going through the list of "Stable Versions" located in the extension's "Description" tab.
 
 platform.extension.updater.checkForUpdates=Check for updates
 platform.extension.updater.checkForUpdatesGlobally=Check for updates on farm
