--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -1322,7 +1322,7 @@ core.delete.confirmWithInlinks=In addition, the deletion of a document is not re
 core.recyclebin.showlistmsg=The following versions are in the recycle bin:
 core.recyclebin.deleter=Deleter
 core.recyclebin.actions=Actions
-core.recyclebin.deleteDate=Delete Date
+core.recyclebin.deleteDate=Deletion Date
 core.recyclebin.delete=Delete
 core.recyclebin.restore=Restore
 core.recyclebin.confirm=Are you sure you wish to move this document to the recycle bin?
