XWIKI-11602: Introduce a configuration to select the HTML version to use according to the current skin.

--- a/xwiki-platform-core/pom.xml
+++ b/xwiki-platform-core/pom.xml
@@ -440,6 +440,12 @@
           -->
           <ignored>
             <!-- Remove the following ignores after we release the current version as final -->
+            <difference>
+              <differenceType>7012</differenceType>
+              <className>org/xwiki/skin/Skin</className>
+              <method>org.xwiki.rendering.syntax.Syntax getTargetSyntax()</method>
+              <justification>Add a new method to this young API</justification>
+            </difference>
           </ignored>
           <excludes>
             <exclude>**/internal/**</exclude>
