--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
     <connection>scm:git:git://github.com/xwiki/xwiki-platform.git</connection>
     <developerConnection>scm:git:git@github.com:xwiki/xwiki-platform.git</developerConnection>
     <url>https://github.com/xwiki/xwiki-platform/tree/master/</url>
-    <tag>HEAD</tag>
+    <tag>stable-6.4.x</tag>
   </scm>
   <issueManagement>
     <system>jira</system>
