[misc] Make the Require.js configuration for the Tree Widget reusable.
(cherry picked from commit d1f1891dee38c28872a7aaa0a2771be9359a47ec)

--- a/xwiki-platform-core/pom.xml
+++ b/xwiki-platform-core/pom.xml
@@ -381,15 +381,10 @@
               <!-- Make sure this execution is not used by default (you need to call it explicitly in your pom). -->
               <phase>none</phase>
               <goals>
-                <goal>copy-resources</goal>
+                <goal>resources</goal>
               </goals>
               <configuration>
                 <outputDirectory>${webjar.contentDirectory}</outputDirectory>
-                <resources>
-                  <resource>
-                    <directory>src/main/resources</directory>
-                  </resource>
-                </resources>
               </configuration>
             </execution>
           </executions>
