--- a/xwiki-platform-core/pom.xml
+++ b/xwiki-platform-core/pom.xml
@@ -593,6 +593,7 @@
     <module>xwiki-platform-statistics</module>
     <module>xwiki-platform-store</module>
     <module>xwiki-platform-tag</module>
+    <module>xwiki-platform-template</module>
     <module>xwiki-platform-test</module>
     <module>xwiki-platform-tree</module>
     <module>xwiki-platform-user</module>
