--- a/xwiki-platform-core/xwiki-platform-template/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-template/pom.xml
@@ -1,4 +1,6 @@
-/*
+<?xml version="1.0" encoding="UTF-8"?>
+
+<!--
  * See the NOTICE file distributed with this work for additional
  * information regarding copyright ownership.
  *
@@ -16,30 +18,20 @@
  * License along with this software; if not, write to the Free
  * Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
  * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
- */
-package com.xpn.xwiki.internal.template;
+-->
 
-/**
- * Fired when a template is deleted.
- *
- * @version $Id$
- * @since 6.4M1
- */
-public class TemplateDeletedEvent extends AbstractTemplateEvent
-{
-    /**
-     * Matches any {@link TemplateDeletedEvent}.
-     */
-    public TemplateDeletedEvent()
-    {
-
-    }
-
-    /**
-     * @param id the id of the template
-     */
-    public TemplateDeletedEvent(String id)
-    {
-        super(id);
-    }
-}
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.xwiki.platform</groupId>
+    <artifactId>xwiki-platform-core</artifactId>
+    <version>7.0-SNAPSHOT</version>
+  </parent>
+  <artifactId>xwiki-platform-template</artifactId>
+  <name>XWiki Platform - Template - Parent POM</name>
+  <packaging>pom</packaging>
+  <description>XWiki Platform - Template - Parent POM</description>
+  <modules>
+    <module>xwiki-platform-template-api</module>
+  </modules>
+</project>
