XWIKI-11689: Bootstrap 2.3.2 shouldn't be packaged in XE.
(cherry picked from commit 365fe4c10f0eb54526a5b30de1ad5396f00a5c4e)

--- a/xwiki-platform-core/xwiki-platform-icon/xwiki-platform-icon-fontawesome/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-icon/xwiki-platform-icon-fontawesome/pom.xml
@@ -61,6 +61,12 @@
       <artifactId>font-awesome</artifactId>
       <version>4.2.0</version>
       <scope>runtime</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.webjars</groupId>
+          <artifactId>bootstrap</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <!-- We use JavaScript to fix the way fonts are loaded on IE8. -->
     <dependency>
