XWIKI-11689: Bootstrap 2.3.2 shouldn't be packaged in XE.
(cherry picked from commit 365fe4c10f0eb54526a5b30de1ad5396f00a5c4e)

Conflicts:
	xwiki-platform-core/xwiki-platform-icon/xwiki-platform-icon-fontawesome/pom.xml

--- a/xwiki-platform-core/xwiki-platform-icon/xwiki-platform-icon-fontawesome/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-icon/xwiki-platform-icon-fontawesome/pom.xml
@@ -60,6 +60,13 @@
       <groupId>org.webjars</groupId>
       <artifactId>font-awesome</artifactId>
       <version>4.2.0</version>
+      <scope>runtime</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.webjars</groupId>
+          <artifactId>bootstrap</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 </project>
