XWIKI-11696: Add the ability to find tree nodes * Create a jstree plugin for finding tree nodes using our own suggest.js * Add support for suggesting documents, attachments and spaces to the document tree, using Solr with a fallback on database search. * Add a new parameter named 'finder' to the {{documentTree}} and {{tree}} wiki macros that enables the finder plugin for the tree. * FIX: openTo parameter was not working when showWikis was enabled. * Enhance suggest.js to support: ** font icons ** referencing nested properties in the resultXXX configuration options (for JSON sources only) ** the results JSON can be an array (no need to specify 'resultsParameter' configuration option) ** specifying a source id in multi-source mode (in order to be able to apply different styles to suggestions comming from different sources)

--- a/xwiki-platform-core/xwiki-platform-tree/xwiki-platform-tree-webjar/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-tree/xwiki-platform-tree-webjar/pom.xml
@@ -92,9 +92,9 @@
         <version>1.7.0.1.1</version>
         <configuration>
           <outputDirectory>${webjar.contentDirectory}</outputDirectory>
-          <includes>
-            <include>tree.less</include>
-          </includes>
+          <excludes>
+            <exclude>**/jstree/**</exclude>
+          </excludes>
         </configuration>
         <executions>
           <execution>
