XWIKI-11719: Add the ability to configure whether to keep successful mail statuses or not

--- a/xwiki-platform-core/pom.xml
+++ b/xwiki-platform-core/pom.xml
@@ -437,6 +437,12 @@
               <method>java.util.Iterator createMessages(java.lang.String, java.lang.Object, java.lang.String, java.util.Map)</method>
               <justification>Young API. Made the API more generic.</justification>
             </difference>
+            <difference>
+              <differenceType>6001</differenceType>
+              <className>org/xwiki/mail/script/AbstractMailScriptService</className>
+              <field>configuration</field>
+              <justification>Young API. Internal refactoring</justification>
+            </difference>
           </ignored>
           <excludes>
             <exclude>**/internal/**</exclude>
