--- a/xwiki-platform-core/pom.xml
+++ b/xwiki-platform-core/pom.xml
@@ -448,6 +448,8 @@
             <exclude>**/internal/**</exclude>
             <exclude>**/test/**</exclude>
             <!-- Remove the following excludes after we release the current version as final -->
+            <!-- We refactored the client code of the WYSIWYG editor to use the new tree. -->
+            <exclude>org/xwiki/gwt/wysiwyg/client/**</exclude>
           </excludes>
         </configuration>
       </plugin>
