--- a/xwiki-platform-core/xwiki-platform-filter/xwiki-platform-filter-script/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-filter/xwiki-platform-filter-script/pom.xml
@@ -50,18 +50,16 @@
       <artifactId>xwiki-platform-security-api</artifactId>
       <version>${project.version}</version>
     </dependency>
-
-    <!-- Mostly used for right testing -->
+    <!-- Mostly used for Rights testing -->
     <dependency>
       <groupId>org.xwiki.platform</groupId>
       <artifactId>xwiki-platform-oldcore</artifactId>
       <version>${project.version}</version>
     </dependency>
-
     <!-- Testing dependencies -->
     <dependency>
       <groupId>org.xwiki.commons</groupId>
-      <artifactId>xwiki-commons-test-component</artifactId>
+      <artifactId>xwiki-commons-tool-test-component</artifactId>
       <version>${commons.version}</version>
       <scope>test</scope>
     </dependency>
