--- a/xwiki-platform-core/xwiki-platform-uiextension/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-uiextension/pom.xml
@@ -28,7 +28,7 @@
     <version>7.0-SNAPSHOT</version>
   </parent>
   <artifactId>xwiki-platform-uiextension</artifactId>
-  <name>XWiki Platform - User Interface Extension - Parent POM</name>
+  <name>XWiki Platform - UI Extension - Parent POM</name>
   <packaging>pom</packaging>
   <description>User Interface extension mechanism for XWiki</description>
   <modules>
