--- a/xwiki-platform-core/xwiki-platform-uiextension/xwiki-platform-uiextension-api/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-uiextension/xwiki-platform-uiextension-api/pom.xml
@@ -28,7 +28,7 @@
     <version>7.0-SNAPSHOT</version>
   </parent>
   <artifactId>xwiki-platform-uiextension-api</artifactId>
-  <name>XWiki Platform - User Interface Extension - API</name>
+  <name>XWiki Platform - UI Extension Extension - API</name>
   <packaging>jar</packaging>
   <description>Java API for the User Interface extensions</description>
   <properties>
