--- a/xwiki-platform-core/xwiki-platform-uiextension/xwiki-platform-uiextension-test/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-uiextension/xwiki-platform-uiextension-test/pom.xml
@@ -28,7 +28,7 @@
     <version>7.0-SNAPSHOT</version>
   </parent>
   <artifactId>xwiki-platform-uiextension-test</artifactId>
-  <name>XWiki Platform - User Interface Extension - Functional Tests</name>
+  <name>XWiki Platform - UI Extension Extension - Functional Tests</name>
   <!-- TODO: Move to use "functional-test" in the future when http://jira.codehaus.org/browse/MNG-1911 is fixed,
        see http://jira.xwiki.org/jira/browse/XWIKI-7683 -->
   <packaging>jar</packaging>
