--- a/xwiki-platform-core/xwiki-platform-uiextension/xwiki-platform-uiextension-ui/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-uiextension/xwiki-platform-uiextension-ui/pom.xml
@@ -28,7 +28,7 @@
     <version>7.0-SNAPSHOT</version>
   </parent>
   <artifactId>xwiki-platform-uiextension-ui</artifactId>
-  <name>XWiki Platform - User Interface Extension - UI</name>
+  <name>XWiki Platform - UI Extension - UI</name>
   <packaging>xar</packaging>
   <description>UI for the User Interface Extensions</description>
   <properties>
