--- a/xwiki-platform-core/xwiki-platform-annotations/xwiki-platform-annotation-core/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-annotations/xwiki-platform-annotation-core/pom.xml
@@ -115,6 +115,14 @@
           </execution>
         </executions>
       </plugin>
+      <!-- TODO: Remove once the tests have been fixed to not output anything to the console! -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <properties combine.self="override"/>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
