XWIKI-11252: Introduce template and skin manager public API

--- a/xwiki-platform-core/xwiki-platform-template/xwiki-platform-template-api/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-template/xwiki-platform-template-api/pom.xml
@@ -42,12 +42,12 @@
     <dependency>
       <groupId>org.xwiki.platform</groupId>
       <artifactId>xwiki-platform-skin-api</artifactId>
-      <version>${platform.version}</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.xwiki.platform</groupId>
       <artifactId>xwiki-platform-model</artifactId>
-      <version>${platform.version}</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.xwiki.rendering</groupId>
